cpp00/{ex01,ex02}: Done
- Reformat cpp00-ex01, add global .gitignore
- Stop traking binaries
- Add cpp00 .gitignore
- Done cpp00-ex01, I'm tired

--- a/cpp00/ex01/Makefile
+++ b/cpp00/ex01/Makefile
@@ -4,8 +4,8 @@ CC = c++
 CFLAGS = -Wall -Wextra -Werror -std=c++98
 RM = rm -rf
 
-HEADERS = PhoneBook.hpp Contact.hpp
-SRCS = main.cpp PhoneBook.cpp Contact.cpp
+HEADERS = PhoneBook.hpp Contact.hpp utils.hpp
+SRCS = main.cpp PhoneBook.cpp Contact.cpp utils.cpp
 OBJS = $(SRCS:%.cpp=%.o)
 
 .PHONY: all clean fclean re
