cpp02/{ex00,ex01}: Do some work

--- a/cpp02/ex01/Makefile
+++ b/cpp02/ex01/Makefile
@@ -5,7 +5,7 @@ CFLAGS = -Wall -Wextra -Werror -std=c++98
 RM = rm -rf
 
 HEADERS = Fixed.hpp
-SRCS = main.cpp Fixed.cpp
+SRCS = my_test.cpp Fixed.cpp
 OBJS = $(SRCS:%.cpp=%.o)
 
 .PHONY: all clean fclean re
