--- a/cpp09/ex00/Makefile
+++ b/cpp09/ex00/Makefile
@@ -1,7 +1,7 @@
 NAME = btc
 
 CC = c++
-# CFLAGS = -Wall -Wextra -Werror -std=c++98
+CFLAGS = -Wall -Wextra -Werror -std=c++98
 RM = rm -rf
 
 HEADERS = BitcoinExchange.hpp Date.hpp
