Split classes to their files

--- a/cpp09/ex02/Makefile
+++ b/cpp09/ex02/Makefile
@@ -4,8 +4,8 @@ CC = c++
 CFLAGS = -Wall -Wextra -Werror -std=c++98
 RM = rm -rf
 
-HEADERS = 
-SRCS = main.cpp
+HEADERS = Sorter.hpp VectorSorter.hpp DequeSorter.hpp
+SRCS = main.cpp Sorter.cpp VectorSorter.cpp DequeSorter.cpp
 OBJS = $(SRCS:%.cpp=%.o)
 
 all: $(NAME)
