Delete .txt files

--- a/cpp09/ex02/Makefile
+++ b/cpp09/ex02/Makefile
@@ -1,7 +1,7 @@
 NAME = PmergeMe
 
-CC = g++
-# CFLAGS = -Wall -Wextra -Werror -std=c++98
+CC = c++
+CFLAGS = -Wall -Wextra -Werror -std=c++98
 RM = rm -rf
 
 HEADERS = ISortStrategy.hpp JacobsthalDecreasingGenerator.hpp \
