Complete cpp09/ex02

--- a/cpp09/ex02/Makefile
+++ b/cpp09/ex02/Makefile
@@ -7,12 +7,12 @@ RM = rm -rf
 HEADERS = Timer.hpp \
 	ISortStrategy.hpp JacobsthalDecreasingGenerator.hpp \
 	vector_merge_insertion/VectorMergeInsertion.hpp vector_merge_insertion/VectorChunk.hpp \
-	deque_merge_insertion/DequeMergeInsertion.hpp
+	deque_merge_insertion/DequeMergeInsertion.hpp deque_merge_insertion/DequeChunk.hpp
 
 SRCS = main.cpp Timer.cpp print_result_details.cpp \
 	ISortStrategy.cpp JacobsthalDecreasingGenerator.cpp \
 	vector_merge_insertion/VectorMergeInsertion.cpp vector_merge_insertion/VectorChunk.cpp \
-	deque_merge_insertion/DequeMergeInsertion.cpp
+	deque_merge_insertion/DequeMergeInsertion.cpp deque_merge_insertion/DequeChunk.cpp
 
 OBJS = $(SRCS:%.cpp=%.o)
 
